--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+   <div id="board">
+       <h1>Tic Tac Toe</h1>
+       <div class="row"></div>
+       <div class="row"></div>
+       <div class="row"></div>
+
+
+
+
+
+
+   </div>
     
 </body>
 </html>
