--- a/index.html
+++ b/index.html
@@ -4,35 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TicTacToe</title>
+    <title> 💦 Tic Tac Toe 🍆</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div id="board">
-        <h1>Tic Tac Toe</h1>
-        <div class="row">
+    <main id="board">
+        <h1>💦 Tic Tac Toe 🍆</h1>
+        <section class="row">
             <div class="top left"></div>
-            <div class="top middle"></div>
+            <div class="top center"></div>
             <div class="top right"></div>
-        </div>
-        <div class="row">
+        </section>
+        <section class="row">
             <div class="middle left"></div>
-            <div class="center"></div>
+            <div class="middle center"></div>
             <div class="middle right"></div>
-        </div>
-        <div class="row">
+        </section>
+        <section class="row">
             <div class="bottom left"></div>
-            <div class="bottom middle"></div>
+            <div class="bottom center"></div>
             <div class="bottom right"></div>
-        </div>
+        </section>
 
 
-
-
-
-
-    </div>
+    </main>
     <script src="app.js"></script>
 
 </body>
