removed eggplant and squirt emoji

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> 💦 Tic Tac Toe 🍆</title>
+    <title> Tic Tac Toe </title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <main id="board">
-        <h1>💦 Tic Tac Toe 🍆</h1>
+        <h1> Tic Tac Toe </h1>
         <section class="row">
             <div class="top left"></div>
             <div class="top center"></div>
